--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="navigation-wrap">
                 <nav role="navigation" class="navigation-items w-nav-menu"><a href="/" aria-current="page" class="navigation-item w-nav-link w--current">Home</a><a href="https://linktr.ee/rixels1337x" class="navigation-item w-nav-link">links</a><a href="https://ko-fi.com/rixels" class="navigation-item w-nav-link">Commissions</a>
                     <a
-                        href="https:/smarturl.it/levibatkin" class="navigation-item w-nav-link">Music</a>
+                        href="https://smarturl.it/levibatkin" class="navigation-item w-nav-link">Music</a>
                 </nav>
                 <div class="menu-button w-nav-button"><img src="https://uploads-ssl.webflow.com/6221e7d3c0ed2f2ea059a94d/6221e7d3c0ed2f7aa459a95e_menu-icon.png" width="22" alt="" class="menu-icon" /></div>
             </div>
