--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
     </div>
     <div class="section">
         <div id="works-grid" class="w-layout-grid works-grid">
-            <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-7359a951"><a href="#" class="work-image cc-work-1 w-inline-block"></a>
-                <div class="work-description"><a href="#" class="project-name-link">Discord Bot Development<br/></a>
+            <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-7359a951"><a href="https://rixels1337x.xyz/" class="work-image cc-work-1 w-inline-block"></a>
+                <div class="work-description"><a href="https://rixels1337x.xyz/" class="project-name-link">Discord Bot Development<br/></a>
                     <div class="paragraph-light">I program custom Discord bots with many features!</div>
                 </div>
             </div>
-            <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fad-7359a951"><a href="#" class="work-image cc-work-2 w-inline-block"></a>
-                <div class="work-description"><a href="#" class="project-name-link">Web Development</a>
+            <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fad-7359a951"><a href="https://catmanjoe.com" class="work-image cc-work-2 w-inline-block"></a>
+                <div class="work-description"><a href="https://catmanjoe.com" class="project-name-link">Web Development</a>
                     <div class="paragraph-light">I develop custom websites and pages for you!</div>
                 </div>
             </div>
-            <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fb4-7359a951"><a href="#" class="work-image cc-work-3 w-inline-block"></a>
-                <div class="work-description"><a href="#" class="project-name-link">Custom tools</a>
+            <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fb4-7359a951"><a class="work-image cc-work-3 w-inline-block"></a>
+                <div class="work-description"><a class="project-name-link">Custom tools</a>
                     <div class="paragraph-light">I can code custom Discord tools that work for many cool things.</div>
                 </div>
             </div>
-            <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fbb-7359a951"><a href="#" class="work-image cc-work-4 w-inline-block"></a>
-                <div class="work-description"><a href="#" class="project-name-link">Game Development</a>
+            <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fbb-7359a951"><a href="https://github.com/Levi-Batkin/Unit-5-7-Assignment" class="work-image cc-work-4 w-inline-block"></a>
+                <div class="work-description"><a href="https://github.com/Levi-Batkin/Unit-5-7-Assignment" class="project-name-link">Game Development</a>
                     <div class="paragraph-light">I can develop game menus and games, with still improving knowledge on it.</div>
                 </div>
             </div>
