--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fc9-7359a951" class="work-position-wrap">
                     <div class="position-name-text">Game Development L3</div>
                     <div class="paragraph-light cc-position-name">Current studying time:</div>
-                    <div class="paragraph-tiny cc-paragraph-tiny-light">A September 2020 — present<br/></div>
+                    <div class="paragraph-tiny cc-paragraph-tiny-light">September 2021 — present<br/></div>
                 </div>
             </div>
         </div>
