--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       </div>
       <hr>
       <div class="text-muted d-flex justify-content-between align-items-center pt-3">
-        <p class="mb-0">Copyright © 2022 Rixels' Hosting&nbsp;</p>
+        <p class="mb-0">Copyright © 2022 Rixels' Hosting&nbsp;</p> <a href="//www.dmca.com/Protection/Status.aspx?ID=b67dbb55-5466-4fc9-bc89-cc84b90cec49" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w250-5x1-01.png?ID=b67dbb55-5466-4fc9-bc89-cc84b90cec49"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
         <ul class="list-inline mb-0">
           <li class="list-inline-item"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
               fill="currentColor" viewBox="0 0 16 16" class="bi bi-discord">
