--- a/rixradio.html
+++ b/rixradio.html
@@ -49,9 +49,11 @@
         <div class="container bg-dark py-5">
             <div class="row">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">  
-                    <audio id="audio">
-                        <source src="http://rixradio.xyz:8000/local.ogg" type="audio/ogg">
-                        Your browser does not support the audio element.
+                    <audio controls>
+                        <source src="http://rixradio.xyz:8000/local.ogg" type="audio/ogg" />
+                        <p>
+                          <a href="myAudio.ogg"></a>
+                        </p>
                       </audio>
             </div>
         </div>
